<?xml version="1.0"?>
<package format="3">
  <name>rs_to_velodyne</name>
  <version>0.0.0</version>
  <description>The rs_to_velodyne package</description>

  <maintainer email="hvt@todo.todo">hvt</maintainer>
  <maintainer email="labiybafakh@gmail.com">Muhammad Labiyb Afakh</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>

  <export>
  </export>
</package>
